--- a/软考备赛/10.设计模式.md
+++ b/软考备赛/10.设计模式.md
@@ -1867,3 +1867,596 @@ Mement 模式适用于：
 
 - 必须保存一个对象在某一个时刻的（部分）状态，这样以后需要时它才能恢复到先前的状态。
 - 如果一个用接口来让其他对象直接得到这些状态，将会暴露对象的实现细节并破坏对象的封装性。
+
+
+
+### 7. Observer（观察者）
+
+1）意图
+
+定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都得到通知并被自动更新。
+
+2）结构
+
+![image-20230416165012628](../00box/photo/image-20230416165012628.png)
+
+
+
+其中：
+
+-  Subject(目标)知道它的观察者，可以有任意多个观察者观察同一个目标；提供注册和删除观察者对象的接口。 
+-  Observer(观察者)为那些在目标发生改变时需获得通知的对象定义一个更新接口。 
+-  ConcreteSubject(具体目标)将有关状态存入各ConcreteObserver对象；当它的状态发生改变时，向它的各个观察者发出通知。 
+-  ConcreteObserver (具体观察者)维护一个指向 ConcreteSubject 对象的引用；存储有关状态，这些状态应与目标的状态保持一致
+-  实现 Observer 的更新接口，以使自身状态与目标的状态保持一致。 
+
+```java
+/**
+ * 观察者模式
+ */
+public class ObserverPattern {
+    public static void main(String[] args) {
+        Subject subjectA = new ConcreteSubject("目标A");
+
+        Observer observerB = new ConcreteObserver("张三",subjectA);
+        Observer observerC = new ConcreteObserver("李四",subjectA);
+        Observer observerD = new ConcreteObserver("王五",subjectA);
+        
+        subjectA.setState("更新了");
+    }
+}
+
+interface Subject { // 目标接口
+    void Attach(Observer observer); // 添加观察者
+
+    void Detach(Observer observer); // 删除观察者
+
+    void Notify(); // 状态改变后，通知所有观察者
+
+    void setState(String state); // 设置状态（改变状态）
+    String getState(); // 获取状态
+}
+
+class ConcreteSubject implements Subject {
+    private String name;
+    private String state;
+
+    private List<Observer> observerList;
+
+    public ConcreteSubject(String name) {
+        state = "未更新";
+        this.name = name;
+        observerList = new ArrayList<>();
+    }
+
+    @Override
+    public void Attach(Observer observer) {
+        observerList.add(observer);
+    }
+
+    @Override
+    public void Detach(Observer observer) {
+        observerList.remove(observer);
+    }
+
+    @Override
+    public void Notify() {
+        for (Observer observer : observerList) {
+            observer.update();
+        }
+    }
+
+    @Override
+    public void setState(String state) {
+        this.state = state;
+
+        System.out.println(name + "的状态发生变化，变化后的状态为：" + state);
+        Notify();
+    }
+
+    @Override
+    public String getState() {
+        return state;
+    }
+}
+
+interface Observer { // 观察者接口
+    void update();  // 收到通知，更新观察者的状态
+}
+
+class ConcreteObserver implements Observer {
+
+    private String name;
+    private String state;
+
+    private Subject subject;
+
+    public ConcreteObserver(String name, Subject subject) {
+        this.name = name;
+        this.subject = subject;
+        subject.Attach(this);
+        state = subject.getState();
+    }
+
+    @Override
+    public void update() {
+        System.out.println(name + " 收到通知");
+        state = subject.getState(); //  让当前观察者的状态 和 目标改变后的状态保持一致
+        System.out.println(name + " 改变后的状态为："+state);
+    }
+}
+```
+
+
+3）适用性
+
+Observer 模式适用于：
+
+- 当一个抽象模型有两个方面，其中一个方面依赖于另一个方面，将这两者封装在独立的对象中以使它们可以各自独立地改变和复用。
+- 当对一个对象的改变需要同时改变其他对象，而不知道具体有多少对象有待改变时。
+- 当一个对象必须通知其他对象，而它又不能假定其他对象是谁，即不希望这些对象是紧耦合的。
+
+
+
+### 8. State（状态）
+
+1）意图
+
+允许一个对象在其内部状态改变时改变它的行为。对象看起来似乎修改了它的类。
+
+2）结构
+
+![image-20230417082353859](../00box/photo/image-20230417082353859.png)
+
+```java
+/**
+ * 状态模式
+ */
+
+public class StatePattern {
+    public static void main(String[] args) {
+        Context context = new Context(); // count = 3
+
+        System.out.println("状态：" + context.getState() + " 数量：" + context.getCount());
+
+        context.Request(); // 购买一个饮料 count = 2
+        context.Request(); // 购买一个饮料 count = 1
+        context.Request(); // 购买一个饮料 count = 0
+
+        System.out.println("状态：" + context.getState() + " 数量：" + context.getCount());
+
+        context.Request(); // 无货，等待补货
+
+        System.out.println("状态：" + context.getState() + " 数量：" + context.getCount());
+
+        context.Request(); // 购买一个饮料 count = 4
+        System.out.println("状态：" + context.getState() + " 数量：" + context.getCount());
+
+    }
+}
+
+class Context{ // 贩卖机
+    private int count;
+
+    private State state;
+
+    public Context(){
+        count = 3;
+        state = new StateA();
+    }
+
+    public int getCount() {
+        return count;
+    }
+
+    public void setCount(int count) {
+        this.count = count;
+    }
+
+    public State getState() {
+        return state;
+    }
+
+    public void setState(State state) {
+        this.state = state;
+    }
+
+    public void Request(){  // 购买饮料
+        state.Handle(this);
+    }
+}
+
+interface State{
+    void Handle(Context context);
+}
+
+class StateA implements State{
+
+    @Override
+    public void Handle(Context context) {
+        int count = context.getCount();
+
+        if (count >= 1){
+            System.out.println("购买成功~");
+            context.setCount(count - 1);
+
+            if (context.getCount() == 0){
+                context.setState(new StateB()); // 设置为无货状态
+            }
+        }else {
+            System.out.println("购买失败~");
+        }
+    }
+}
+
+class StateB implements State{
+
+    @Override
+    public void Handle(Context context) {
+        int count = context.getCount();
+
+        if (count == 0){
+            System.out.println("购买失败！等待补货~");
+
+            context.setCount(5);
+            System.out.println("补货成功，请重新购买~");
+
+            context.setState(new StateA());
+        }
+    }
+}
+```
+
+3）适用性
+
+State 模式适用于：
+
+- 一个对象的行为决定于它的状态，并且它必须在运行时刻根据状态改变它的行为。
+- 一个操作中含有庞大的多分支的条件语句，且这些分支依赖于该对象的状态。这个状态常用一个或多个枚举常量表示。
+
+
+
+### 9. Strategy（策略）
+
+1）意图
+
+定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。此模式使得算法可以独立于使用它们的客户而变化。
+
+2）结构
+
+![image-20230417110447963](../00box/photo/image-20230417110447963.png)
+
+```java
+/**
+ * 策略模式
+ */
+public class StrategyPattern {
+    public static void main(String[] args) {
+
+        OperationContext context = new OperationContext(new Addstrategy());
+        context.Operation(20,17);
+
+        context = new OperationContext(new Substrategy());
+        context.Operation(20,17);
+
+        context = new OperationContext(new Multstrategy());
+        context.Operation(20,17);
+    }
+}
+
+class OperationContext{
+    private Strategy strategy;
+
+    public OperationContext(Strategy strategy){
+        this.strategy =strategy;
+    }
+
+    public void Operation(int a, int b){
+        strategy.TwoNumberOperation(a,b);
+    }
+}
+
+
+interface Strategy{
+    void TwoNumberOperation(int a,int b);
+}
+
+class Addstrategy implements Strategy{
+
+    @Override
+    public void TwoNumberOperation(int a, int b) {
+        System.out.println(a + b);
+    }
+}
+
+class Substrategy implements Strategy{
+
+    @Override
+    public void TwoNumberOperation(int a, int b) {
+        System.out.println(a - b);
+    }
+}
+
+class Multstrategy implements Strategy{
+
+    @Override
+    public void TwoNumberOperation(int a, int b) {
+        System.out.println(a * b);
+    }
+}
+```
+
+3）适用性
+
+Strategy 模式适用于：
+
+-  许多相关的类仅仅是行为有异。 
+-  需要使用一个算法的不同变体。 
+-  算法使用客户不应该知道的数据。可使用策略模式以避免暴露复杂的、与算法相关的数据结构。 
+-  一个类定义了多种行为，并且这些行为在这个类的操作中以多个条件语句的形式出现，将相关的条件分支移入它们各自的 Strategy 类中，以代替这些条 件语句。 
+
+
+
+### 10. Template Method（模板方法）
+
+1）意图
+
+定义一个操作中的算法骨架，而将一些步骤延迟到子类中。Template Method 使得子类可以不改变一个算法的结构即可重定义该算法的某些特定步骤。
+
+2）结构
+
+![image-20230417112937358](../00box/photo/image-20230417112937358.png)
+
+其中：
+
+- AbstractClass（抽象类）定义抽象的原语操作，具体的子类将重定义它们以实现一个算法的各步骤；实现模板方法，定一个算法的骨架，该模板方法不仅调用原语操作，也调用定义在 AbstractClass 或其他对象中的操作。
+- ConcreteClass（具体类）实现原语操作以完成算法中与特定子类相关的步骤。
+
+```java
+/**
+ * 模板方法模式
+ */
+public class TemplateMethodPattern {
+    public static void main(String[] args) {
+        // 父类名 对象名 = new 子类名();
+
+        Person student = new Student();
+        Person teacher = new Teacher();
+
+        student.TemplateMethod();
+
+        System.out.println("=========分割线=============");
+
+        teacher.TemplateMethod();
+    }
+}
+
+abstract class Person{
+    public void TemplateMethod(){
+        System.out.println("上课 去教室");
+        PrimitiveOperation1();
+        System.out.println("下课 离开教室");
+        PrimitiveOperation2();
+    }
+
+    public abstract void PrimitiveOperation1(); // 原语操作 1：上课过程 学生 听课... 老师 讲课
+    public abstract void PrimitiveOperation2(); // 原语操作 2：作业  学生 写作业 提交作业... 老师批改作业 打分数
+}
+
+class Student extends Person{
+
+    @Override
+    public void PrimitiveOperation1() {
+        System.out.println("学生：听课 学习 做笔记 提出问题");
+    }
+
+    @Override
+    public void PrimitiveOperation2() {
+        System.out.println("学生：写作业 提交作业");
+    }
+}
+
+class Teacher extends Person{
+
+    @Override
+    public void PrimitiveOperation1() {
+        System.out.println("老师：上课 讲课 解答问题 布置作业");
+    }
+
+    @Override
+    public void PrimitiveOperation2() {
+        System.out.println("老师：批改作业 打分数");
+    }
+}
+```
+
+3）适用性
+
+Template Method 模式适用于：
+
+-  一次性实现一个算法的不变的部分，并将可变的行为留给子类来实现。 
+-  各子类中公共的行为应被提取出来并集中到一个公共父类中，以避免代码重复。 
+-  控制子类扩展：模板方法在特定点调用“hook”操作(默认行为，子类可以在必要时进行重定义扩展)，这就只允许在这些点进行扩展。 
+
+
+
+### 11. Visitor（访问者）
+
+1）意图
+
+表示一个作用于某对象结构中的各元素的操作。它允许在不改变各元素的类的前提下定义作用于这些元素的新操作。
+
+2）结构
+
+![image-20230417135729720](../00box/photo/image-20230417135729720.png)
+
+其中：
+
+-  Visitor(访问者)为该对象结构中 ConcreteElement 的每一个类声明一个 Visit 操作。该操作的名字和特征标识了发送 Vist 请求给该访问者的那个类，这使得访问者可以确定正被访问元素的具体的类。这样访问者就可以通过该元素的特定接口直接访问它。 
+-  ConcreteVisitor (具体访问者)实现每个有 Visitor 声明的操作，每个操作实现本算法的一部分，而该算法片段乃是对应于结构中对象的类。Concrete Visitor为该算法提供了上下文并存储它的局部状态。这一状态常常在遍历该结构的过程中累积结果。 
+-  Element (元素)定义以一个访问者为参数的 Accept 操作。 
+-  ConcreteElement (具体元素)实现以一个访问者为参数的 Accept 操作。 
+-  ObjectStructure (对象结构)能枚举它的元素；可以提供一个高层的接口以允许该访问者访问它的元素；可以是一个组合或者一个集合，如一个列表或一个无序集合。 
+
+```java
+/**
+ * 访问者模式
+ */
+public class VisitorPattern {
+    public static void main(String[] args) {
+        PersonStructure structure = new PersonStructure();
+
+        Visitor1 visitor1 = new Visitor1();
+        System.out.println("访问者1的访问记录：");
+        structure.Accept(visitor1);
+        System.out.println("学生年龄的总和：" + visitor1.getStudentAgeSum() +" 老师年龄的总和：" + visitor1.getTeacherAgeSUm());
+
+        System.out.println("=========分割线==============");
+
+        Visitor2 visitor2 = new Visitor2();
+        System.out.println("访问者2的访问记录：");
+        structure.Accept(visitor2);
+        System.out.println("学生的最高成绩：" + visitor2.getMaxScore() + " 老师的最高工龄：" + visitor2.getMaxWorkYear());
+
+    }
+}
+
+interface Visitor{
+    void VistStudent(Student student); // 访问
+    void vistTeacher(Teacher teacher); // 访问老师
+}
+
+class Visitor1 implements Visitor{ // 访问者1 分别统计学生和老师的年龄总和
+    private int studentAgeSum = 0;
+    private int teacherAgeSUm =0;
+
+    public int getStudentAgeSum() {
+        return studentAgeSum;
+    }
+
+    public int getTeacherAgeSUm() {
+        return teacherAgeSUm;
+    }
+
+    @Override
+    public void VistStudent(Student student) {
+        System.out.println("访问者1访问学生：" + student.getName() + " 年龄：" + student.getAge());
+        studentAgeSum += student.getAge();
+    }
+
+    @Override
+    public void vistTeacher(Teacher teacher) {
+        System.out.println("访问者1访问老师：" + teacher.getName() + " 年龄：" + teacher.getAge());
+        teacherAgeSUm += teacher.getAge();
+    }
+}
+
+class Visitor2 implements Visitor{ // 访问者2 分别求出 学生的最高成绩 以及 老师的最高工龄
+    private int maxScore = -1;
+    private int maxWorkYear = -1;
+
+    public int getMaxScore() {
+        return maxScore;
+    }
+
+    public int getMaxWorkYear() {
+        return maxWorkYear;
+    }
+
+    @Override
+    public void VistStudent(Student student) {
+        System.out.println("访问者2访问学生：" + student.getName() + " 成绩：" + student.getScore());
+        maxScore = Math.max(maxScore,student.getScore());
+    }
+
+    @Override
+    public void vistTeacher(Teacher teacher) {
+        System.out.println("访问者2访问老师：" + teacher.getName() + " 工龄：" + teacher.getWorkYear());
+        maxWorkYear = Math.max(maxWorkYear,teacher.getWorkYear());
+    }
+}
+
+class PersonStructure{
+    private List<Person> personList = new ArrayList<>();
+
+    public PersonStructure(){
+        personList.add(new Student("张三",20,70));
+        personList.add(new Student("李四",21,80));
+        personList.add(new Student("王五",22,90));
+
+        personList.add(new Teacher("李老师",26,3));
+        personList.add(new Teacher("陈老师",27,4));
+        personList.add(new Teacher("刘老师",28,5));
+    }
+
+    public void Accept(Visitor visitor){
+        for (Person person : personList) {
+            person.Accept(visitor);
+        }
+    }
+}
+
+abstract class Person{
+    private String name;
+    private int age;
+
+
+    public Person(String  name,int age){
+        this.name = name;
+        this.age = age;
+    }
+
+    public String getName(){
+        return name;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public abstract void Accept(Visitor visitor);
+}
+
+class Student extends Person{
+
+    private int score;
+    public Student(String name,int age,int score){
+        super(name,age);
+        this.score = score;
+    }
+
+    public int getScore(){
+        return score;
+    }
+
+    @Override
+    public void Accept(Visitor visitor) {
+        visitor.VistStudent(this);
+    }
+}
+
+class Teacher extends Person{
+    private int workYear;
+    public Teacher(String name,int age,int workYear){
+        super(name,age);
+        this.workYear = workYear;
+    }
+
+    public int getWorkYear(){
+        return workYear;
+    }
+
+    @Override
+    public void Accept(Visitor visitor) {
+        visitor.vistTeacher(this);
+    }
+}
+```
+
+3）适用性
+
+Visitor 模式适用于：
+
+- 一个对象结构包含很多类对象，它们有不同的接口，而用户想对这些对象实施一些依赖于其具体类的操作。
+- 需要对一个对象结构中的对象进行很多不同的并且不相关的操作，而又想要避免这些操作“污染”这些对象的类。
+- 定义对象结构的类很少改变，但经常需要在此结构上定义新的操作。
